--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   "dependencies": {
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
+    "nodemailer": "^7.0.12",
     "pg": "^8.16.3",
+    "razorpay": "^2.9.6",
     "zod": "^4.3.4"
   }
 }
