--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
-    "nodemailer": "^7.0.12",
     "pg": "^8.16.3",
     "razorpay": "^2.9.6",
+    "resend": "^6.7.0",
     "zod": "^4.3.4"
   }
 }
